# ndt_localization

./: CMakeLists.txt  package.xml  readme.md
include/ndt_localization/: map_loader.h  ndt.h
node/: map_loader.cpp  ndt.cpp  points_downsampler.cpp
